--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^6.30.0",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
+    "recharts": "^2.15.2",
     "validator": "^13.7.0",
     "web-vitals": "^4.2.4",
     "yup": "^1.6.1"
