--- a/package.json
+++ b/package.json
@@ -11,16 +11,21 @@
     "@testing-library/user-event": "^14.6.1",
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
+    "body-parser": "^2.2.0",
     "bootstrap": "^5.3.3",
+    "express": "^5.1.0",
     "formik": "^2.4.6",
+    "framer-motion": "^12.6.5",
     "http-proxy-middleware": "^3.0.3",
     "lucide-react": "^0.487.0",
     "mongodb": "^6.15.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.0",
     "react-scripts": "^5.0.1",
     "recharts": "^2.15.2",
+    "simple-hl7": "^3.3.0",
     "validator": "^13.7.0",
     "web-vitals": "^4.2.4",
     "yup": "^1.6.1"
