--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-PG_CONNECTION_STRING=postgres://postgres:newpassword@localhost:5432/postgres
+PG_CONNECTION_STRING=postgresql://postgres:1234@localhost:5432/demodb
